<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_meal">

    <fragment
        android:id="@+id/navigation_meal"
        android:name="com.example.cookbook.ui.meal.MealFragment"
        android:label="@string/title_meal"
        tools:layout="@layout/fragment_meal" />

    <fragment
        android:id="@+id/navigation_shopping_list"
        android:name="com.example.cookbook.ui.shopping_list.ShoppingListFragment"
        android:label="@string/title_shopping_list"
        tools:layout="@layout/fragment_shopping_list" />

    <fragment
        android:id="@+id/navigation_planner"
        android:name="com.example.cookbook.ui.planner.PlannerFragment"
        android:label="@string/title_planner"
        tools:layout="@layout/fragment_planner" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.cookbook.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
